Update clients
